web/saito/css-imports/saito-header.css
#saito-header {
  position: fixed;
  display: flex;
  width: 100vw;
  background: var(--saito-arcade-header-background);
  backdrop-filter: blur(5px);
  margin: 0;
  align-items: center;
  padding: 0 calc((100vw - var(--saito-width)) / 2);
  top: 0;
  left: 0;
  z-index: 15;
  height: var(--saito-header-height);
}

#saito-header nav {
  display: flex;
  align-items: center;
  margin-left: auto;
}

.saito-header-logo {
  width: 15rem;
  cursor: pointer;
}

#saito-header-menu-toggle {
  margin-right: auto;
  cursor: pointer;
  transition: all 0.2s;
  position: relative;
}

#saito-header-menu-toggle:hover {
  opacity: 0.9;
  transform: scale(1.2);
}

#saito-header-menu-toggle:active {
  transform: scale(0.9);
}

#saito-header-menu-toggle span {
  display: block;
  width: 33px;
  height: 4px;
  margin-bottom: 5px;
  position: relative;
  background: var(--saito-white);
  border-radius: 3px;
  z-index: 1;
  transform-origin: 4px 0px;
  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
  background: 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
  margin-left: auto;
}

#saito-header-menu-toggle span:first-child {
  transform-origin: 0% 0%;
}

#saito-header-menu-toggle span:nth-last-child(2) {
  transform-origin: 0% 100%;
}

.saito-header-profile .saito-identicon-box .saito-identicon {
  width: 4.9rem;
  height: 4.9rem;
}

.saito-header-hamburger-contents {
  display: block;
  pointer-events: none;
  background-color: var(--saito-background-color);
  position: absolute;
  right: 0;
  top: var(--saito-header-height);
  border-top: 1px solid var(--saito-border-color);
  border-left: 1px solid var(--saito-border-color);
  transition: all 0.2s;
  opacity: 0;
  width: 20rem;
  height: calc(100vh - var(--saito-header-height) + 3px);
  overflow: hidden auto;
}

.saito-header-menu-section {
  padding: 1.5rem 0;
  font-size: 1.1rem;
  overflow: hidden;
  padding-bottom: 0.5rem;
}

.saito-header-menu-section li i {
  color: var(--saito-primary);
  font-size: 2rem !important;
  width: 0.5rem !important;
}

.saito-header-menu-section:not(:last-child) {
  border-bottom: 1px solid var(--saito-border-color);
}

.show-menu {
  opacity: 1;
  width: 40rem;
  -webkit-transform: translateX(0);
  transform: translateX(0);
  pointer-events: auto;
}

.saito-header-backdrop {
  display: none;
  pointer-events: none;
  position: fixed;
  top: var(--saito-header-height);
  left: 0;
  width: 100vw;
  height: calc(100vh - var(--saito-header-height));
  opacity: 0;
  overflow: hidden;
  z-index: 19;
}

.saito-header-backdrop.menu-visible {
  display: block;
  pointer-events: auto;
}

.header-wallet {
  display: flex;
  flex-direction: column;
  gap: 2rem;
  align-items: center;
}

#qrcode img {
  height: auto;
  max-width: 20rem;
  width: 20vh;
  border: 2px solid var(--saito-black);
  padding: 0.5rem;
  border-radius: 0.5rem;
  margin: 2rem 0 0;
  background: var(--saito-white);
}

.balance-amount {
  font-size: 4.2rem;
  margin-right: -1.5rem;
}

.wallet-balance select {
  border: none;
  background: none;
  width: auto;
  font-size: 2.2rem;
  color: var(--saito-font-color);
}

.wallet-btn-container {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-column-gap: 3.3rem;
  background: var(--saito-font-color);
  border-radius: 0.5rem;
  padding: 0.75rem;
  width: 95%;
  text-transform: uppercase;
}

.wallet-btn {
  color: var(--saito-background-color);
  display: flex;
  cursor: pointer;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
  padding: 0.5rem 0 0;
}

.wallet-btn:hover>i {
  transform: scale(1.25);
}

.wallet-btn i {
  transition: all 0.2s ease-in-out;
}

.slidein-panel {
  position: absolute;
  top: 42rem;
  background: var(--saito-background-color);
  width: 100%;
  height: calc(100vh - var(--saito-header-height) - 42rem);
  overflow: hidden;
  z-index: 2;
  transition: all 0.2s ease-in-out;
  padding: 1.5rem 0rem;
  left: 100vw;
  border-left: 1px solid var(--saito-border-color);
}

.slidein-panel.show {
  left: 0vw;
  border: none;
}

.wallet-idenicon {
  width: 3rem;
  height: 3rem;
}

.pubkey-containter {
  display: flex;
  flex-direction: row;
  width: 90%;
  align-items: center;
  justify-content: center;
  cursor: pointer;
}

.pubkey-containter:hover i {
  transform: scale(1.1);
}

.wallet-infoo {
  padding: 0rem;
  margin: 0rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
  justify-content: space-around;
}

#qrcode {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0rem 0 0;
}

.wallet-balance {
  display: flex;
  flex-direction: row;
  gap: 2rem;
  align-items: baseline;
}

.profile-public-key {
  width: 75%;
  font-size: 1.7rem;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.saito-header-chat {
  display: none !important;
}

.hamburger-container {
  display: flex;
  align-items: center;
  gap: 1rem;
}

#header-username {
  color: var(--saito-white);
  cursor: pointer;
  font-size: 2rem;
  padding: 0 0 0 2rem;
  max-width: 20rem;
  overflow: hidden;
  text-overflow: ellipsis;
}

/*
  Floating menu
*/

.saito-floating-plus-btn {
  margin: auto;
  width: 6rem;
  height: 6rem;
  bottom: 0;
  right: 0;
  transition: transform 200ms ease-out;
  background-color: var(--saito-primary);
  border-radius: 50%;
  text-align: center;
  line-height: 6rem;
  z-index: 6;
  cursor: pointer;
  display: none;
}

.saito-floating-plus-btn.activated {
  transform: rotate(45deg);
}

.saito-floating-plus-btn i {
  font-size: 2.5rem;
  color: #fff;
  line-height: 64px;
}

.saito-floating-menu-item {
  position: relative;
  width: 5rem;
  height: 5rem;
  border-radius: 50%;
  z-index: 5;
  background-color: var(--saito-background-color);
  transition: box-shadow 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
  box-shadow: 1px 1px 1px var(--saito-border-color-dark), -1px -1px 1px var(--saito-border-color-dark), -1px 1px 1px var(--saito-border-color-dark), 1px -1px 1px var(--saito-border-color-dark);
  line-height: 5rem;
  border: 1px solid var(--saito-border-color);
  color: var(--saito-font-color);
  cursor: pointer;
  text-align: center;
}

.redsquare-menu {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.saito-floating-menu-mask {
  width: 100%;
  height: 100%;
  background: var(--saito-background-color);
  position: absolute;
  top: 0rem;
  left: 0rem;
  z-index: -1;
  opacity: 0;
  transition: all 0.3s ease-in-out;
}

.saito-floating-menu-mask.show {
  z-index: 2;
  opacity: 0.9;
}

.saito-floating-container {
  display: inline-block;
  height: max-content;
  display: block;
  position: fixed;
  bottom: 2.5rem;
  right: 2.5rem;
  z-index: 3;
}

.saito-floating-item-container {
  display: none;
  transition: opacity 200ms ease-out;
  position: absolute;
  z-index: -1;
  opacity: 0;
}

.saito-floating-item-container.show {
  display: flex;
  flex-direction: column;
  gap: 2rem;
  align-items: center;
  margin-bottom: 2rem;
  z-index: 2;
  opacity: 1;
  position: relative;
}

@media screen and (max-width: 1600px) {
  #saito-header {
    padding: 1.3rem calc((100vw - var(--saito-width)) / 2);
  }
}

@media screen and (max-width: 1500px) {
  #saito-header {
    padding: 1.3rem 2rem;
  }
}

@media screen and (max-width: 1200px) {
  .saito-floating-plus-btn {
    display: block;
  }
  .saito-floating-container {
    right: 35.5rem;
  }
}

@media screen and (max-width: 900px) {
  .saito-floating-container {
    right: 2.5rem;
  }
}

@media screen and (max-width: 768px) {
  .saito-header-hamburger-contents {
    width: 80vw;
    overflow-x: hidden;
  }
  .slidein-panel {
    width: 80vw;
  }
  .external-links {
    padding-bottom: 10rem;
  }
}

@media screen and (max-width: 620px) {
  .saito-header-hamburger-contents {
    width: 100vw;
    padding: 0rem;
  }
  .slidein-panel {
    width: 100vw;
  }
  #saito-header {
    padding: 1.3rem 1rem;
  }
  .saito-header-chat {
    display: flex !important;
  }
  .saito-header-logo {
    max-width: 12rem;
  }
}

@media screen and (max-width: 420px) {
  #header-username {
    font-size: 1.5rem;
  }
}

